# sync

./: CMakeLists.txt  README.md
src/: library.cpp  plugin.cpp  plugin.h  status.cpp  status.h  tracked.cpp  tracked.h
